Add EasyPeasy documentation updates

--- a/docs/docs/assets/stylesheets/extra.css
+++ b/docs/docs/assets/stylesheets/extra.css
@@ -141,25 +141,10 @@ label.md-nav__title[for="__drawer"] {
   height: 0;
 }
 
-/* Hide header title */
-/*
-.md-header__ellipsis {
+/* Hide site name next to the logo, but keep version selector */
+.md-header__topic {
   display: none;
 }
-*/
-/* Hide site title text */
-/*
-.md-header__title {
-  display: none;
-}
-*/
-/* Keep the header title area (needed for mike version selector),
-   but hide only the site title text, like "EasyDiffraction Library" */
-/*
-.md-header__title .md-header__topic {
-  display: none;
-}
-*/
 
 /* Increase logo size */
 .md-logo :is(img, svg) {
