Fix docs by hiding site name

--- a/docs/docs/assets/stylesheets/extra.css
+++ b/docs/docs/assets/stylesheets/extra.css
@@ -142,7 +142,7 @@ label.md-nav__title[for="__drawer"] {
 }
 
 /* Hide site name next to the logo, but keep version selector */
-.md-header__topic:first-child {
+.md-header__topic {
   display: none;
 }
 
