--- a/docs/docs/assets/stylesheets/extra.css
+++ b/docs/docs/assets/stylesheets/extra.css
@@ -143,7 +143,7 @@ label.md-nav__title[for="__drawer"] {
 
 /* Hide site name next to the logo, but keep version selector */
 .md-header__topic:first-child {
-  display: none;
+  /*display: none;*/
 }
 
 /* Increase logo size */
