--- a/docs/docs/assets/stylesheets/extra.css
+++ b/docs/docs/assets/stylesheets/extra.css
@@ -141,9 +141,10 @@ label.md-nav__title[for="__drawer"] {
   height: 0;
 }
 
-/* Hide site name next to the logo, but keep version selector */
-.md-header__topic:first-child {
-  /*display: none;*/
+/* Keep the header title area (needed for mike version selector),
+   but hide only the site title text */
+.md-header__title .md-header__topic {
+  display: none;
 }
 
 /* Increase logo size */
